# ProgramTraceVisualizer

./: .clang-tidy  .gitmodules  CMakeLists.txt  README.md
external-utilities/Coverage/: CMakeLists.txt  README.md  covers.cpp
src/: main.cpp
src/App/: App.cpp  App.h  AppStateMachine.cpp  AppStateMachine.h  CMakeLists.txt
src/Controllers/: CMakeLists.txt
src/Controllers/IPmovesController/: IPmovesController.cpp  IPmovesController.h
src/Controllers/TrajectoryController/: TrajectoryController.cpp  TrajectoryController.h
src/Controllers/W2VController/: W2VController.cpp  W2VController.h
src/Controllers/WaitingController/: WaitingController.cpp  WaitingController.h
src/Core/: CMakeLists.txt
src/Core/IPmoves/: CMakeLists.txt
src/Core/IPmoves/Clamping/: DataClamper.h
src/Core/IPmoves/IPmovesHandler/: AddressBuffer.cpp  AddressBuffer.h  IPmovesHandler.cpp  IPmovesHandler.h
src/Core/IPmoves/SlidingWindow/: SlidingWindowIterator.h  SlidingWindowIteratorExtended.h
src/Core/Plotting/: CMakeLists.txt
src/Core/Plotting/HilbertCurve/: HilbertCurve.cpp  HilbertCurve.h  HilbertCurveManager.cpp  HilbertCurveManager.h
src/Core/Plotting/Plot2DMesh/: Plot2DMesh.cpp  Plot2DMesh.h
src/Core/Plotting/PlotMesh/: Plot2DMesh.cpp  Plot2DMesh.h  Plot3DMesh.cpp  Plot3DMesh.h  PlotMesh.cpp  PlotMesh.h
src/Core/Trajectory/: CMakeLists.txt  TrajectoryHandler.cpp  TrajectoryHandler.h
src/Core/w2v/: CMakeLists.txt  Clamping.h  UmapWrapper.cpp  UmapWrapper.h  kek.h  w2v.cpp  w2v.h
src/GUI/: CMakeLists.txt
src/GUI/Graphics/: CMakeLists.txt
src/GUI/Graphics/Primitives/: IRenderable.h
src/GUI/Graphics/Primitives/Cube/: Cube.cpp  Cube.h
src/GUI/Graphics/Primitives/ShaderWidget/: ShaderWidget.cpp  ShaderWidget.h
src/GUI/Graphics/RenderBuffer/: RenderBuffer.cpp  RenderBuffer.h
src/GUI/Graphics/Shader/: Shader.cpp  Shader.h
src/GUI/Graphics/VertexObjects/: VertexObject.cpp  VertexObject.h  VertexObjectCustom.cpp  VertexObjectCustom.h  VertexObjectIndexed.cpp  VertexObjectIndexed.h
src/GUI/Shader/: Shader.cpp
src/GUI/UI/: CMakeLists.txt
src/GUI/UI/Helpers/: Alignment.cpp  Alignment.h  ValueWithPrev.h
src/GUI/UI/Scenes/BasicScene/: BasicScene.cpp  BasicScene.h
src/GUI/UI/Scenes/DetailsScene/: DetailsScene.cpp  DetailsScene.h
src/GUI/UI/Scenes/IPmovesControlScene/: IPmovesControlScene.cpp  IPmovesControlScene.h
src/GUI/UI/Scenes/OptionsScene/: OptionsScene.cpp  OptionsScene.h
src/GUI/UI/Scenes/TrajectoryControlScene/: TrajectoryControlScene.cpp  TrajectoryControlScene.h
src/GUI/UI/Scenes/ViewScene/: ViewScene.cpp  ViewScene.h
src/GUI/UI/Scenes/W2VControlScene/: W2VControlScene.cpp  W2VControlScene.h
src/GUI/UI/UIManager/: UIManager.cpp  UIManager.h
src/GUI/UI/ViewScene/: ViewScene.cpp  ViewScene.h
src/GUI/UI/Widgets/: ProgressWidget.cpp  ProgressWidget.h  WaitingWidget.cpp  WaitingWidget.h
src/GUI/VertexObjects/: VertexObject.cpp  VertexObject.h  VertexObjectIndexed.cpp
src/GUI/Window/: Window.cpp  Window.h  window.cpp  window.h
src/Resources/Shaders/: Cube.frag  Cube.vert  Default.vert  Plot2D.frag  Plot2D.geom
src/Resources/ShadersEmbed/: CubeShaders.h  DefaultShaders.h  Plot2DShaders.h  Plot3DShaders.h  ProgressWidgetShader.h  WaitingWidgetShader.h
src/Resources/ShadersRaw/: Default.frag  Plot2D.geom  Plot2D.vert
src/Utils/: CMakeLists.txt
src/Utils/FileReader/: FileReader.cpp  FileReader.h
src/Utils/FrameRater/: FrameRater.h
src/Utils/LazyFileBuffer/: LazyFileBuffer.cpp  LazyFileBuffer.h  LazyFileIterator.cpp  LazyFileIterator.h
src/Utils/LightTimer/: LightTimer.cpp  LightTimer.h
src/Utils/Logger/: ConsoleLogger.cpp  ConsoleLogger.h  Logger.h
